gcc/testsuite/g++.dg/cpp0x/constexpr-nonstatic.C
// { dg-options -std=c++11 }

struct A
{
  constexpr int i;		// { dg-error "" }
};
